# util_bot

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
src/: constants.rs  main.rs
src/apps/telegram_bot/: initialization.rs  mod.rs
src/apps/telegram_bot/commands/: all_commands.rs  mod.rs  start.rs
